[project]
name = "resume-analyzer-job-recommendation-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apify-client>=2.5.0",
    "mcp[cli]>=1.27.0",
    "openai>=2.32.0",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "streamlit>=1.56.0",
]
